Create sign-up/login and logout functions

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,4 +11,7 @@ html
     = vite_client_tag
     = vite_javascript_tag 'application'
   body
-    = yield
+    = render 'shared/header'
+    main
+      = notice
+      = yield
