--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,10 +6,9 @@ html
     meta[name='viewport' content='width=device-width,initial-scale=1']
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true
     = vite_client_tag
     = vite_javascript_tag 'application'
+    = vite_stylesheet_tag 'application'
   body
     = render 'shared/header'
     main
