--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -13,5 +13,7 @@ header.mx-9.my-4
             ul
               li
                 = button_to 'Log out', logout_path, method: :delete
+              li
+                = button_to 'Delete account', me_path, method: :delete, form: { data: { turbo_confirm: t('user.confirm_deletion_of_account') } }
         - else
           = button_to 'Sign up/Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }, class: 'font-medium text-lg'
