--- a/app/views/expressions/show.html.slim
+++ b/app/views/expressions/show.html.slim
@@ -3,8 +3,8 @@ p style="color: green" = notice
 == render @expression
 
 div
-  => link_to "Edit this expression", edit_expression_path(@expression)
+  => link_to 'Edit this expression', edit_expression_path(@expression)
   '|
-  =< link_to "Back to expressions", expressions_path
+  =< link_to 'Back to expressions', expressions_path
 
-  = button_to "Destroy this expression", @expression, method: :delete
+  = button_to 'Destroy this expression', @expression, method: :delete
