--- a/app/views/expressions/show.html.slim
+++ b/app/views/expressions/show.html.slim
@@ -1,33 +1,33 @@
 p style="color: green" = notice
 
-h1
-  = t('.title')
-div
+.title
+  h1
+    = t('.title')
+  div
+    - @expression.expression_items.each_with_index do |expression_item, i|
+      p #{i + 1}. #{expression_item.content}
+.details
   - @expression.expression_items.each_with_index do |expression_item, i|
-    p #{i + 1}. #{expression_item.content}
-
-div
-  - @expression.expression_items.each do |expression_item|
-    p
-      = expression_item.content
-    p
-      = t('.explanation')
-    p
-      = expression_item.explanation
-    - if expression_item.examples.present?
+    div class="expression#{i}"
       p
-        = t('.example')
-      - expression_item.examples.each do |example|
+        = expression_item.content
+      p
+        = t('.explanation')
+      p
+        = expression_item.explanation
+      - if expression_item.examples.present?
         p
-          = example.content
-
-div
+          = t('.example')
+        - expression_item.examples.each do |example|
+          p
+            = example.content
+.note
   - if @expression.note.present?
     p
       = t('.note')
     p
       = @expression.note
-div
+.tag
   - if @expression.tags.present?
     p
       = t('.tag')
