Change redirect URL when the next or previous expression does not exist

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,3 +1,7 @@
 p style="color: green" = notice
 
-div(data-vue='ExpressionsList')
+- if @expressions.blank?
+  p
+    = t('.no_data')
+- else
+    div(data-vue='ExpressionsList')
