--- a/app/views/expressions/show.html.slim
+++ b/app/views/expressions/show.html.slim
@@ -38,6 +38,11 @@ p style="color: green" = notice
 div
   = link_to t('.edit'), edit_expression_path(@expression), data: { turbo: false }
   '|
-  = link_to t('.back'), root_path, data: { turbo: false }
+  = link_to t('.go_to_index'), root_path, data: { turbo: false }
 
   = button_to t('.delete'), @expression, method: :delete, data: { turbo_confirm: t('.confirm_deletion_of_expression') }
+
+- if @expression.previous
+  = link_to t('.back'), expression_path(@expression.previous), data: { turbo: false }
+- if @expression.next
+  = link_to t('.next'), expression_path(@expression.next), data: { turbo: false }
