Create list of bookmarks

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -4,4 +4,4 @@ p style="color: green" = notice
   p
     = t('.no_data')
 - else
-    div(data-vue='ExpressionsList')
+    div(data-vue='ExpressionsList' data-vue-path='api/expressions')
