--- a/app/views/expressions/show.html.slim
+++ b/app/views/expressions/show.html.slim
@@ -42,7 +42,7 @@ div
 
   = button_to t('.delete'), @expression, method: :delete, data: { turbo_confirm: t('.confirm_deletion_of_expression') }
 
-- if @expression.previous
-  = link_to t('.back'), expression_path(@expression.previous), data: { turbo: false }
-- if @expression.next
-  = link_to t('.next'), expression_path(@expression.next), data: { turbo: false }
+- if @expression.previous(@list, @user)
+  = link_to t('.back'), expression_path(@expression.previous(@list, @user)), data: { turbo: false }
+- if @expression.next(@list, @user)
+  = link_to t('.next'), expression_path(@expression.next(@list, @user)), data: { turbo: false }
