Load JavaScript when screens transition

--- a/app/views/expressions/edit.html.slim
+++ b/app/views/expressions/edit.html.slim
@@ -5,4 +5,4 @@ br
 div
   = link_to t('.go_to_show'), @expression
   '|
-  = link_to t('.go_to_index'), root_path, data: { turbo: false }
+  = link_to t('.go_to_index'), root_path
