--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,7 +1,13 @@
 p style="color: green" = notice
+div
+  p = flash[:error]
+  - if flash[:error]
+    = button_to 'Sign up/Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }
 
 - if @expressions.blank?
   p
     = t('.no_data')
 - else
     div(data-vue='ExpressionsList' data-vue-path='api/expressions')
+
+= link_to "+ #{t('.create')}", new_expression_path
