--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,7 +1,7 @@
 p style="color: green" = notice
-div
-  p = flash[:error]
-  - if flash[:error]
+.error
+  p = alert
+  - if alert == 'ログインが必要です'
     = button_to 'Sign up/Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }
 
 - if @expressions.blank?
