--- a/app/views/expressions/show.html.slim
+++ b/app/views/expressions/show.html.slim
@@ -40,8 +40,8 @@ div
     = link_to t('.edit'), edit_expression_path(@expression)
     = button_to t('.delete'), @expression, method: :delete, data: { turbo_confirm: t('.confirm_deletion_of_expression') }
 
-- if @expression.previous(@list, @user)
-  = link_to t('.back'), expression_path(@expression.previous(@list, @user))
-- if @expression.next(@list, @user)
-  = link_to t('.next'), expression_path(@expression.next(@list, @user))
+- if @expression.previous(@user)
+  = link_to t('.back'), expression_path(@expression.previous(@user))
+- if @expression.next(@user)
+  = link_to t('.next'), expression_path(@expression.next(@user))
 = link_to t('.go_to_index'), root_path
