--- a/app/views/bookmarked_expressions/index.html.slim
+++ b/app/views/bookmarked_expressions/index.html.slim
@@ -8,3 +8,4 @@ p style="color: green" = notice
       = t('.unauthorized')
 - else
   div(data-vue='ExpressionsList' data-vue-path='api/bookmarked_expressions')
+  = link_to t('.start_quiz'), bookmarked_expressions_quiz_path
