--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -4,6 +4,7 @@ p style="color: green" = notice
   - if alert == 'ログインが必要です'
     = button_to 'Sign up/Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }
 
+= render 'shared/page_tabs'
 - if @expressions.blank?
   p
     = t('.no_data')
