Fix the path because / was forgotten

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -9,7 +9,7 @@ p style="color: green" = notice
   p
     = t('.no_data')
 - else
-    div(data-vue='ExpressionsList' data-vue-path='api/expressions')
+    div(data-vue='ExpressionsList' data-vue-path='/api/expressions')
 
 .unauthorized_access_to_create
   p = flash[:unauthorized_access_to_create]
