--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,7 @@ html
     = vite_client_tag
     = vite_javascript_tag 'application'
     = vite_stylesheet_tag 'application'
+    script src="https://kit.fontawesome.com/ce82121a9a.js" crossorigin="anonymous"
   body
     = render 'shared/header'
     main
