--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -9,6 +9,7 @@ p style="color: green" = notice
   p
     = t('.no_data')
 - else
+  .page-body__column
     div(data-vue='ExpressionsList' data-vue-path='/api/expressions')
 
 .unauthorized_access_to_create
