--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,5 +12,5 @@ html
     script src="https://kit.fontawesome.com/ce82121a9a.js" crossorigin="anonymous"
   body
     = render 'shared/header'
-    main
+    main.bg-lavender-50.px-80.py-8
       = yield
