Add design to quiz

--- a/app/views/bookmarked_expressions/index.html.slim
+++ b/app/views/bookmarked_expressions/index.html.slim
@@ -8,6 +8,10 @@
         .h-80
           p.font-bold.ml-10.pt-6
             = t('.no_data')
+        .flex.justify-end.mt-6
+          .text-center.w-1/2.pr-10.pl-3
+            p.inline-block.w-11/12.font-semibold.text-lg.py-1.rounded-full.bg-lavender-600.text-white.hover:cursor-not-allowed
+              = t('.start_quiz')
       - else
         .h-80
           p.font-bold.ml-16.pt-6
