--- a/app/views/quizzes/show.html.slim
+++ b/app/views/quizzes/show.html.slim
@@ -1,1 +1,2 @@
-div(data-vue='WordQuiz' data-vue-path='/api/quiz')
+.bg-white.py-12.rounded-sm.max-w-800.w-full
+  div(data-vue='WordQuiz' data-vue-path='/api/quiz')
