--- a/app/views/bookmarked_expressions/index.html.slim
+++ b/app/views/bookmarked_expressions/index.html.slim
@@ -1,4 +1,4 @@
-.bg-white.py-12.rounded-sm.max-w-800.w-full
+.bg-white.py-12.rounded-sm.max-w-800.w-full.mx-auto
   p.text-green-700.pl-5.pb-6.font-bold
     = notice
   = render 'shared/page_tabs'
