--- a/app/views/bookmarked_expressions/quizzes/show.html.slim
+++ b/app/views/bookmarked_expressions/quizzes/show.html.slim
@@ -1,2 +1,2 @@
-.bg-white.py-12.rounded-sm.max-w-800.w-full
+.bg-white.py-12.rounded-sm.max-w-800.w-full.mx-auto
   div(data-vue='WordQuiz' data-vue-path='/api/bookmarked_expressions/quiz')
