--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,5 +1,6 @@
-p style="color: green" = notice
-.welcome.bg-white.py-16.rounded-sm.max-w-800
+.welcome.bg-white.py-16.rounded-sm.max-w-800.mx-auto
+  p.text-green-700.pl-8.pb-5.font-bold
+    = notice
   h1.text-2xl.font-bold.w-2/3.pb-14.pl-8.max-w-lg
     = t('.target')
     i class="fa-solid fa-earth-asia pr-0.5"
