--- a/app/views/welcome/privacy_policy.html.slim
+++ b/app/views/welcome/privacy_policy.html.slim
@@ -1,4 +1,4 @@
-.max-w-800.w-full.mx-auto.px-5
+.max-w-800.w-full.mx-auto.px-6.py-6.bg-white.rounded-sm
   h1.font-black.text-2xl.text-center プライバシーポリシー
   p.py-8 本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。
   h2.font-bold.text-lg.border-b.border-gray-300 お客様から取得する情報
