--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -4,9 +4,12 @@ footer.border-t.border-lavender-600.text-neutral-600.text-sm
       = link_to t('terms_of_service'), terms_of_service_path, class: 'hover:underline'
     li.mr-5
       = link_to t('privacy_policy'), privacy_policy_path, class: 'hover:underline'
-    li
-      = link_to 'GitHub', 'https://github.com/ai-24/word-warmup', class: 'hover:underline'
-  .text-center.pb-5
-    i class="fa-regular fa-copyright fa-sm pr-1.5"
-    p.inline-block.pr-2 ai-24
-    p.inline-block 2023
+    - if logged_in?
+      li
+        = button_to t('delete_account'), me_path, method: :delete, form: { data: { turbo_confirm: t('users.confirm_deletion_of_account') } }, class: 'hover:underline'
+  .flex.justify-center
+    .text-center.pb-5
+      i class="fa-regular fa-copyright fa-sm pr-1.5"
+      p.inline-block.pr-1 ai-24
+      p.inline-block.pr-3 2023
+    = link_to 'GitHub', 'https://github.com/ai-24/word-warmup', class: 'hover:underline'
