Change welcome page and add responsive design

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,6 +12,6 @@ html
     script src="https://kit.fontawesome.com/ce82121a9a.js" crossorigin="anonymous"
   body
     = render 'shared/header'
-    main.bg-lavender-50.py-8
+    main
       = yield
     = render 'shared/footer'
