--- a/app/views/welcome/terms_of_service.html.slim
+++ b/app/views/welcome/terms_of_service.html.slim
@@ -1,4 +1,4 @@
-.max-w-800.w-full.mx-auto.px-6.py-6.bg-white.rounded-sm
+.max-w-800.w-full.mx-auto.px-4.sm:px-6.py-16.bg-white
   h1.font-black.text-2xl.text-center 利用規約
   p.py-8 この利用規約（以下、「本規約」といいます。）は、このウェブサイト上で提供するサービス（以下、「本サービス」といいます。）の利用条件を定めるものです。本サービスを利用する全てのユーザーの皆さま（以下、「ユーザー」といいます。）には、本規約に従って、本サービスをご利用いただきます。
   h2.font-bold.text-lg.border-b.border-gray-300 第1条（適用）
